c.newInstance() -> c.getConstructor.newInstance(), yawn.